tests/specs/ecosystem/geacko/resp3_parser/1_2_0.test
geacko/resp3-parser/1.2.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Error'.
  get name(): string {
      ~~~~
    at file://<tmpdir>/src/types.ts:37:7

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Error'.
  get stack(): string {
      ~~~~~
    at file://<tmpdir>/src/types.ts:40:7

Found 2 errors.

error: Type checking failed.

